FIX: All Floating Cards in 1 wrap div.

--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,7 @@ p {
 }
 
 .wrap {
-    margin: 20px auto;
+    margin: 0 auto;
     max-width: 1000px;
 }
 
@@ -59,7 +59,7 @@ p {
 
 .clearfix > div {
     width: calc(100% / 3 - 20px);
-    margin: 0 10px;
+    margin: 20px 10px;
 }
 
 img {
